58) kernel: net: call rcu_read_lock early in process_backlog.<br>
59) kernel: net: clone skb before setting peeked flag.<br>
60) kernel: net: fq_codel: fix return value of fq_codel_drop().<br>
61) kernel: net: arp: fix a lockdep splat in arp_solicit().<br>
62) kernel: net: arp: fix a regression in arp_solicit().<br>
63) kernel: net: arp: inherit metadata dst when creating ARP requests.<br>
64) kernel: net: arp: remove special case to give AX25 it's open arp operations.<br>
65) kernel: net: tcp: don't abort splice() after small transfers.<br>
66) kernel: net: tcp: splice: fix an infinite loop in tcp_read_sock().<br>
67) kernel: net: tcp: remove obsolete check in tcp_set_skb_tso_segs().<br>
68) kernel: net: tcp: avoid merging segments on the OOO queue into a cloned SKB.<br>
69) kernel: net: tcp: tso: allow deferring under reordering state.<br>
70) kernel: net: tcp: fix recv with flags MSG_WAITALL | MSG_PEEK.<br>
71) kernel: net: tcp: allow segment with FIN in tcp_try_coalesce().<br>
72) kernel: net: ipv4: be more aggressive when probing alternative gateways.<br>
73) kernel: net: ipv6: lock socket in ip6_datagram_connect().<br>
74) kernel: net: ipv6: update flowi6_oif in ip6_dst_lookup_flow if not set.<br>
75) kernel: jump_label: Rename JUMP_LABEL_{EN,DIS}ABLE to JUMP_LABEL_{JMP,NOP}.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~95%).<br>
3) need add subchannel select for 5GHz module.<br>
4) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
5) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
6) in fair faif future: need add in firewall support xt_time matches for parental control.<br>
7) in fair faif future: need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
8) in fair fair future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
<br>
<br>
<br>